Fix heading text in index.html

--- a/usecase4-webapp/index.html
+++ b/usecase4-webapp/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to My Web App on Cloud Run !!!</h1> 
+  <h1>Welcome to My Web App on Cloud Run !</h1> 
   <p>This static web app is deployed using Cloud Build CI/CD.</p>
   <button onclick="showMessage()">Click Me!</button>
   <p id="message"></p>
