--- a/usecase4-webapp/index.html
+++ b/usecase4-webapp/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Welcome to My Web App on Cloud Run !</h1> 
-  <p>This static web app is deployed using Cloud Build CI/CD.</p>
+  <p>This static web app is deployed using Cloud Build (usecase4) CI/CD.</p>
   <button onclick="showMessage()">Click Me!</button>
   <p id="message"></p>
   <script src="script.js"></script>
